--- a/reclameaquiscrapp.ipynb
+++ b/reclameaquiscrapp.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,51 +107,49 @@
     }
    ],
    "source": [
-    "# pegando hyperlinks das reclamações avaliadas e/ou respondidas\n",
-    "\n",
     "all_hyperlinks = []\n",
-    "Numero_de_paginas = 50  # máximo de 50 páginas\n",
+    "\n",
+    "Numero_de_paginas = 50 # máximo\n",
     "\n",
     "# Se o CSV ainda não existe, inicia a coleta\n",
     "if not os.path.exists(f'hyperlinks/hyperlinks_{empresa}.csv'):\n",
-    "   \n",
+    "\n",
     "   for i in range(Numero_de_paginas):\n",
     "      try:\n",
+    "            \n",
     "         driver.get(url_r(page=i + 1, type='EVALUATED'))\n",
+    "         \n",
+    "         # espera a página carregar\n",
+    "         time.sleep(random.randint(8, 10))\n",
     "\n",
-    "      \n",
     "         # Captura os hyperlinks da página atual\n",
     "         div_hyperlinks = driver.find_elements(By.CSS_SELECTOR, 'div.sc-1pe7b5t-0.eJgBOc')\n",
     "         current_hyperlinks = [h.find_element(By.CSS_SELECTOR, 'a').get_attribute('href') for h in div_hyperlinks]\n",
     "         \n",
     "         if not current_hyperlinks:\n",
-    "               print(\"Nenhum hyperlink encontrado\")\n",
-    "               break\n",
+    "            print(\"Nenhum hyperlink encontrado\")\n",
+    "            break\n",
     "\n",
     "         print(f\"Página {i+1} - hyperlinks: {current_hyperlinks}\")\n",
     "         all_hyperlinks += current_hyperlinks\n",
     "\n",
+    "            \n",
+    "      except:\n",
+    "         os._exit(1)\n",
     "         \n",
-    "         time.sleep(random.randint(5, 8))\n",
-    "\n",
-    "        \n",
-    "      except Exception as e:\n",
-    "         print(f\"Erro encontrado: {e}\")\n",
-    "         break\n",
     "\n",
     "\n",
     "   df = pd.DataFrame(all_hyperlinks, columns=[\"Hyperlinks\"])\n",
     "   df.to_csv(f'hyperlinks/hyperlinks_{empresa}.csv', index=False)\n",
     "   all_hyperlinks = df[\"Hyperlinks\"].tolist()\n",
-    "    \n",
+    "   \n",
     "else:\n",
-    "\n",
+    "   \n",
     "   # Se o CSV já existe, apenas o lê\n",
     "   df = pd.read_csv(f'hyperlinks/hyperlinks_{empresa}.csv')\n",
     "   all_hyperlinks = df[\"Hyperlinks\"].tolist()\n",
     "\n",
-    "print(all_hyperlinks)\n",
-    "   "
+    "print(all_hyperlinks)"
    ]
   },
   {
