--- a/scrap.ipynb
+++ b/scrap.ipynb
@@ -52,9 +52,8 @@
     "empresas_totoal = pd.read_csv('empresas_total.csv')\n",
     "empresas = empresas_totoal['Nome'].tolist()\n",
     "\n",
-    "e = ['malibu']\n",
     "\n",
-    "for empresa in e:\n",
+    "for empresa in empresas[:50]:\n",
     "\n",
     "    # URL da pagina principal da empresa\n",
     "    url_p = 'https://www.reclameaqui.com.br/empresa/' + empresa + '/'\n",
